--- a/src/Template.Web/Views/Shared/_LayoutHtml.cshtml
+++ b/src/Template.Web/Views/Shared/_LayoutHtml.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewData["Title"] - OnModuli</title>
     <meta name="description" content="@ViewData["Description"]">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
     @RenderSection("googlehead", false)
     @RenderSection("metas", false)
     <link href="~/node_modules/@@fortawesome/fontawesome-free/css/all.min.css" asp-append-version="true" rel="stylesheet" />
