--- a/src/Template.Web/Views/Shared/_LayoutHtml.cshtml
+++ b/src/Template.Web/Views/Shared/_LayoutHtml.cshtml
@@ -6,11 +6,17 @@
     <title>@ViewData["Title"] - OnModuli</title>
     <meta name="description" content="@ViewData["Description"]">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     @RenderSection("googlehead", false)
     @RenderSection("metas", false)
     <link href="~/node_modules/@@fortawesome/fontawesome-free/css/all.min.css" asp-append-version="true" rel="stylesheet" />
     <link href="~/css/bundle-global.min.css" asp-append-version="true" rel="stylesheet" />
     @RenderSection("styles", false)
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
 <body>
     @RenderSection("googlebody", false)
