--- a/src/Template.Web/Views/Shared/_PagingPartial.cshtml
+++ b/src/Template.Web/Views/Shared/_PagingPartial.cshtml
@@ -2,7 +2,7 @@
 <li class="navbar-text text-nowrap">
     <span class="font-weight-light pe-3" title="@SharedLocalizer["numero di elementi individuati con i filtri attuali"]">@Model.TotalItems @SharedLocalizer["elementi"]</span>
 </li>
-<li class="navbar-text text-nowrap">
+<li class="navbar-text text-nowrap text-white">
     @SharedLocalizer["Pagina"] @Model.Page @SharedLocalizer["di"] @Model.TotalPages()&nbsp;
 </li>
 @if (Model.Page <= 1)
