--- a/src/Template.Web/Views/Shared/_PagingPartialFilter.cshtml
+++ b/src/Template.Web/Views/Shared/_PagingPartialFilter.cshtml
@@ -1,7 +1,7 @@
 @inject IHtmlLocalizer<SharedResource> SharedLocalizer
 @model Template.Web.Infrastructure.PagingViewModel
 
-<span class="text-muted text-nowrap pt-1">
+<span class="text-nowrap pt-1 text-white">
     @SharedLocalizer["Pagina"] @Model.Page @SharedLocalizer["di"] @Model.TotalPages()&nbsp;
 </span>
 @if (Model.Page <= 1)
