--- a/src/Template.Web/Areas/Example/Users/Index.cshtml
+++ b/src/Template.Web/Areas/Example/Users/Index.cshtml
@@ -25,9 +25,9 @@
 }
 
 @section pageSubtitle {
-    <nav class="navbar navbar-expand navbar-light flex-wrap onit-page-subtitle justify-content-center">
+    <nav class="navbar navbar-light bg-white onit-page-subtitle px-2 justify-content-center">
         <form method="get" id="annullaRicerca"></form>
-        <form class="onit-form-search w-75 shadow-lg rounded-4" method="get" autocomplete="off">
+        <form class="onit-form-search col-12 col-md-9 col-lg-6 shadow-lg rounded-4" method="get" autocomplete="off">
             <div class="row justify-content-center g-3">
                 <div class="col-md-4">
                     <label asp-for="Filter" class="form-label fw-semibold">Cerca</label>
@@ -60,23 +60,28 @@
 
         .onit-form-search {
             background-color: #28282B;
-			color: #ffffff;
-			padding: 1rem;
+            color: #ffffff;
+            padding: 1rem;
         }
 
-        .onit-page-title,
+        .onit-page-title {
+            background-color: #ffffff;
+            padding: 0.5rem 0.8rem;
+        }
+
         .onit-page-subtitle {
             background-color: #ffffff;
-            padding: 1rem 1.5rem;
+            padding: 0.5rem 0rem;
+            min-width: 80%;
         }
 
-		.card-title {
-			margin-bottom: 0rem;
-		}
+        .card-title {
+            margin-bottom: 0rem;
+        }
 
-		.badge {
-			margin-bottom: 1rem;
-		}
+        .badge {
+            margin-bottom: 1rem;
+        }
 
         .card-user {
             background-color: #ffffff;
@@ -111,10 +116,17 @@
             font-style: italic;
             color: #999;
         }
+
+        media (min-width: 768px) {
+            .w-md-75 {
+                width: 75% !important;
+            }
+        }
     </style>
 }
 
-<div class="container py-4">
+
+<div class="container py-0 md:py-4">
     <div class="row justify-content-center g-4">
         @if (!Model.Users.Any())
         {
