--- a/src/Template.Web/Views/RegistroVisitatori/Index.cshtml
+++ b/src/Template.Web/Views/RegistroVisitatori/Index.cshtml
@@ -81,7 +81,7 @@
             }
         </div>
 
-        <div class="table-responsive shadow-sm rounded-4 w-75 mx-auto">
+        <div class="table-responsive shadow-sm rounded-4 col-12 col-md-9 mx-auto">
             <table class="table table-hover align-middle">
                 <thead>
                     <tr>
