--- a/src/Template.Web/Areas/Example/Users/Index.cshtml
+++ b/src/Template.Web/Areas/Example/Users/Index.cshtml
@@ -35,7 +35,7 @@
                         <span class="input-group-text">
                             <i class="fa-solid fa-fw fa-magnifying-glass"></i>
                         </span>
-                        <input asp-for="Filter" class="form-control" placeholder="Email, nome o cognome..." />
+                        <input asp-for="Filter" class="form-control" placeholder="Email, nome, cognome..." />
                     </div>
                 </div>
                 <div class="col-auto d-flex align-items-end">
@@ -93,8 +93,8 @@
         }
 
             .card-user:hover {
-                transform: translateY(-3px);
-                box-shadow: 0 10px 24px rgba(0, 0, 0, 0.08);
+                transform: translateY(-10px);
+                box-shadow: 0 10px 24px rgba(0, 0, 0, 0.04);
             }
 
             .card-user .card-body {
