--- a/src/Template.Web/Views/RegistroVisitatori/Index.cshtml
+++ b/src/Template.Web/Views/RegistroVisitatori/Index.cshtml
@@ -9,6 +9,7 @@
     <nav class="navbar navbar-expand navbar-light flex-wrap onit-page-title">
         <div class="flex flex-column p-3">
             <h1 class="navbar-brand fw-semibold fs-4 m-0">Registro Visitatori</h1>
+            <p class="text-muted small">Inserisci, consulta e recupera informazioni relative ai visitatori giornalieri </p>
             <div class="ms-auto">
                 <a class="btn btn-primary shadow-sm" href="/RegistroVisitatori/Crea">
                     <i class="fa-solid fa-user-plus me-1"></i> Registra ingresso
@@ -76,7 +77,7 @@
             {
                 <div class="text-white mb-3">
                     <i class="fa-solid fa-user-slash fa-2x mb-2"></i><br />
-                    <em>Nessun visitatore attualmente presente nella struttura.</em>
+                    <em>Nessun visitatore attualmente presente in struttura</em>
                 </div>
             }
         </div>
